Most common / systemic issues (ranked)
1. Async eager-vs-deferred exception timing (highest volume — Cassandra
async ×2, Cassandra async-base, Mongo async, HBase async). Generated
"Edge" examples claimed failures arrive via
future.get()/ExecutionException. In reality, argument-building runs
synchronously at the call site before the future exists —
prepareStatement/parseCql, entity.getClass(), CqlBuilder.insert(Map)'s
checkArgNotEmpty — so they throw directly. Also abacus
ContinuableFuture.map(...) rethrows mapper exceptions unwrapped.
Inverted variant: HBase async scan(...) returns a lazy stream, so .get()
succeeds and UncheckedIOException only fires on consumption (9 overloads
corrected).
2. @throws IllegalArgumentException for null on SDK-delegating methods
with no guard. Corrected where verifiable: Cosmos 26 →
NullPointerException (azure-cosmos uses Guava checkNotNull); Neo4j 24 →
RuntimeException (OGM). DynamoDB (~50 tags) left intact — established,
internally-consistent package convention; exact SDK type unverifiable
without execution.
3. equals/hashCode prose over-claiming value equality. HBase
Get/RowMutations compare row-key only; Scan/Query use reference identity
(no equals). Generated prose wrongly promised "same
columns/filters/mutations."
4. Reactive mapper over-claiming IAE for null/empty
selectPropNames/sort/projection, which the executor actually treats as
all-fields / natural-order / no-projection.
5. NPE-vs-IAE confusion on HBase row-key constructors. Single-arg (row)
deref row.length → NPE; offset/length + ByteBuffer go through checkRow →
IAE. Several Any*(Object) ctors and AnyAppend.of(byte[],int,int) had it
backwards.
6. Wrong method names / non-compiling examples:
Dataset.getColumn(...).mapToDouble (missing .stream()),
Dataset.columnNameList()→columnNames(), a cold reactive Mono never
subscribed, givenName→firstName nested-bean qualifier.

Findings by file (✅ = fixed)

aws/dynamodb/ — AsyncDynamoDBExecutor ✅1 (Dataset
.stream().mapToDouble); v2/